modified environment startup script