@@ -3,6 +3,10 @@
 ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 @echo off
 
-set MAVEN_OPTS=-Xms256m -Xmx2G
+IF "%MAVEN_OPTS%" == "" (
+    ECHO The environment variable 'MAVEN_OPTS' is not set, setting it for you
+    SET MAVEN_OPTS=-Xmx1024M -XX:MaxPermSize=512m
+)
+ECHO MAVEN_OPTS is set to '%MAVEN_OPTS%'
 
 mvn clean install -Prun
